--- a/microscope/client/style.css
+++ b/microscope/client/style.css
@@ -27,6 +27,8 @@ body {
   *zoom: 1;
   -webkit-transition: all 300ms 0ms; -webkit-transition-delay: ease-in; -moz-transition: all 300ms 0ms ease-in; -o-transition: all 300ms 0ms ease-in; transition: all 300ms 0ms ease-in; position: relative;
   opacity: 1;
+  position:relative;
+  transition:all 300ms 0ms ease-in;
 }
 
 .post:before, .post:after {
